Fix FloatingPane and SortList to use tundra sprite image arrows. Since these arrows are float:right they can't be vertical-align: middle so instead using the trick of a &thinsp; to make height==surrounding div height, and then vertical background-align is "center". Refs #6649.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@13690 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/layout/resources/FloatingPane.css
+++ b/layout/resources/FloatingPane.css
@@ -46,9 +46,9 @@
 }
 
 .dojoxFloatingMinimizeIcon {
-	background:url('../../../dijit/themes/tundra/images/arrowDown.png') no-repeat center center; 
-	width:16px;
-	height:16px; 
+	background:url('../../../dijit/themes/tundra/images/spriteArrows.png') no-repeat 0px center; 
+	width:7px;
+	margin: 0px 4px;
 	overflow:hidden;
 	float:right; 
 }
@@ -59,9 +59,9 @@
 
 .floatingPaneMaximized .dojoxFloatingMaximizeIcon { display:none; }
 .dojoxFloatingMaximizeIcon {
-	background:url('../../../dijit/themes/tundra/images/arrowUp.png') no-repeat center center;
-	width:16px;
-	height:16px;
+	background:url('../../../dijit/themes/tundra/images/spriteArrows.png') no-repeat -21px center;
+	width:7px;
+	margin: 0px 4px;
 	overflow:hidden;
 	float:right;	
 }
@@ -71,9 +71,9 @@
 
 .floatingPaneMaximized .dojoxFloatingRestoreIcon { display:inline; }
 .dojoxFloatingRestoreIcon {
-	background:url('../../../dijit/themes/tundra/images/arrowDown.png') no-repeat center center;
-	width:16px; height:16px;
-	overflow:hidden; 
+	background:url('../../../dijit/themes/tundra/images/spriteArrows.png') no-repeat 0px center; 
+	width:7px;
+	margin: 0px 4px;
 	float:right;
 	display:none;
 }
